# MTS

./: dagster_cloud.yaml  dbt_project.yml  profiles.yml
.github/workflows/: branch_deployments.yml  deploy.yml
MTS/: pyproject.toml  setup.py
MTS/MTS/: as400_to_s3.py  assets.py  dbt_cloud_trigger.py  definitions.py  project.py  schedules.py
MTS/MTS/assets/: as400_to_s3.py
MTS/MTS/ops/: trigger_dbt.py
macros/: as400_s3.sql  externalstagetosnf.sql  load_mts_sales_data.sql  mts_bronze_stmast_data.sql  s3_snowflake_stmast.sql  s3_snowflake_womsth.sql  sales_data_load.sql
models/: extract_ibmi_to_s3.py  hh.sql  s3toraw.sql  snowflake.sql
models/example/: my_first_dbt_model.sql  schema.yml
